# nubops

./: .pre-commit-config.yaml  CHANGES.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build.yaml
nubops/: __init__.py  _common.py  build.py  command.py
nubops/templates/django_nginx_gunicorn/: cheatsheet.md  gunicorn.service
nubops/templates/django_nginx_gunicorn/commands/: before.sh
nubops/templates/docker/commands/: after.sh  before.sh  install.sh
nubops/templates/fail2ban/: filter.d-nginx-nohome.conf  filter.d-nginx-noproxy.conf  filter.d-nginx-noscript.conf  jail.local
nubops/templates/fail2ban/commands/: after.sh  install.sh
nubops/templates/nginx_django/: cheatsheet.md  gunicorn.socket  nginix.txt
nubops/templates/nginx_django/commands/: after.sh  before.sh
nubops/templates/nginx_django_gunicorn/commands/: install.sh
nubops/templates/set_timezone/commands/: after.sh
tests/: test_command.py
