[tool.black]
line-length = 120
include = '\.pyi?$'
target-version = [
    "py38",
    "py39",
    "py310",
    "py311",
]
exclude = '''
/(
  \.git
  | build
  | dist
)/
'''

[tool.coverage.report]
exclude_lines = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "assert False",
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if False:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
]

[tool.isort]
profile = "black"
line_length = 120
default_section = "THIRDPARTY"
known_first_party = "scripts"

[tool.poetry]
name = "nubops"
version = "0.2.0"
description = "Tool to quickly set up Ububtu standard services"
readme = "README.md"
authors = ["Thomas Aglassinger"]
license = "BSD"
homepage = "https://github.com/roskakori/nubops"
repository = "https://github.com/roskakori/nubops.git"
documentation = "https://github.com/roskakori/nubops/blob/main/README.md"
keywords = ["installation", "nginx", "service", "setup", "Ubuntu"]
classifiers = [
        "Development Status :: 4 - Beta",
        "Environment :: Console",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: BSD License",
        "Natural Language :: English",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3 :: Only",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Topic :: System :: Installation/Setup",
]
packages = [
    { include = "nubops" },
]

[tool.poetry.dependencies]
python = ">=3.9, <4"

[tool.poetry.group.dev.dependencies]
pytest = "^8"
pytest-cov = "^6"
pytest-order = "^1"
black = {extras = ["d"], version = "^24"}
setuptools = "^78"
twine = "^6"
coverage = "^7"
pre-commit = "^4"

[tool.poetry.scripts]
nubops = "nubops.command:main"

[tool.poetry.urls]
"Issue Tracker" = "https://github.com/roskakori/nubops/issues"
"Changes" = "https://github.com/roskakori/nubops/blob/main/CHANGES.md"

[build-system]
requires = ["poetry-core>=1.9.1"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = """\
    --strict-config
    --strict-markers
    """
filterwarnings = [
    "default",
]
minversion = "8.3"
testpaths = [
    "tests",
]

[pycodestyle]
max-line-length = 120
